--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body id="top">
     <div class="box">
       <div class="header">
-        <div class="page-header page-header-small" filter-color="green">
+        <div class="page-header page-header-small">
           <div class="page-header-image"></div>
           <div class="container">
             <div class="content-center">
@@ -32,16 +32,21 @@
           </div>
         </div>
       </div>
-      <div class="fundo">
-        <div class="button-container"><a class="btn btn-primary" href="https://www.linkedin.com/in/maikelen-salles-2a05b4226/" target="_blank" rel="noopener"><i class="fa fa-linkedin col-2"></i>Me siga no LinkedIn ♡</a></div>
-          <div><a class="btn btn-primary" href="https://www.behance.net/maikelensalles-tech" target="_blank" rel="noopener"><i class="fa fa-behance col-2"></i>Meu portfólio no Behance</a></div>
-          <div><a class="btn btn-primary" href="https://github.com/maikelensalles/" target="_blank" rel="noopener"><i class="fa fa-github col-2"></i>Me siga no GitHub</a></div>
-          <div><a class="btn btn-primary" href="https://maikelensalles.github.io/site/" target="_blank" rel="noopener"><i class="fa fa-code col-2"></i>Meu site pessoal</a></div>
+      <div class="section">
+
+        <div class="fundo">
+          <div class="border">
+            <div><a class="btn botão button-container" href="https://www.linkedin.com/in/maikelen-salles-2a05b4226/" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i>Me siga no LinkedIn ♡</a></div>
+            <div><a class="btn botão" href="https://www.behance.net/maikelensalles-tech" target="_blank" rel="noopener"><i class="fa fa-behance"></i>Meu portfólio no Behance</a></div>
+            <div><a class="btn botão" href="https://github.com/maikelensalles/" target="_blank" rel="noopener"><i class="fa fa-github"></i>Me siga no GitHub</a></div>
+            <div><a class="btn botão" href="https://maikelensalles.github.io/site/" target="_blank" rel="noopener"><i class="fa fa-code"></i>Meu site pessoal</a></div>
+          </div>
+        </div>
       </div>
       <div class="content">
         <footer class="footer">
           <div class="h4 title text-center">♡</div>
-          <div class="container text-center" style="padding-top: 110px;"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/maikelen.salles/" target="_blank"><i class="fa fa-facebook fa-2x"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/maikelensalles" target="_blank"><i class="fa fa-instagram fa-2x"></i></a><a class="cc-whatsapp btn btn-link" href="https://api.whatsapp.com/send?phone=5551980418444&text=Ol%C3%A1%20Maikelen%2C%20vi%20o%20seu%20site%2C%20pode%20me%20ajudar%3F" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a></div>
+          <div class="container text-center"><a class="cc-facebook btn btn-link" href="https://www.facebook.com/maikelen.salles/" target="_blank"><i class="fa fa-facebook fa-2x"></i></a><a class="cc-instagram btn btn-link" href="https://www.instagram.com/maikelensalles" target="_blank"><i class="fa fa-instagram fa-2x"></i></a><a class="cc-whatsapp btn btn-link" href="https://api.whatsapp.com/send?phone=5551980418444&text=Ol%C3%A1%20Maikelen%2C%20vi%20o%20seu%20site%2C%20pode%20me%20ajudar%3F" target="_blank"><i class="fa fa-whatsapp fa-2x"></i></a></div>
           <div class="text-center">
             <p>Made with ♡ by Maikelen Salles</p>
           </div>
