--- a/index.html
+++ b/index.html
@@ -4,6 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Sou Desenvolvedora Front-end e Web Designer, busco oportunidades que me permitam crescer profissionalmente através do desenvolvimento de soluções tecnológicas." />
+    <meta property="og:image" content="Maikelen Salles - Meus links">
+    <meta property="og:site_name" content="Maikelen Salles - Meus links"/>
+    <meta property="og:title" content="Maikelen Salles - Meus links"/>
+    <meta property="og:url" content="https://maikelensalles-tech.web.app/"/>
+    <meta property="og:type" content="website"/>
+    <meta property="og:description" content="Sou Desenvolvedora Front-end e Web Designer, busco oportunidades que me permitam crescer profissionalmente através do desenvolvimento de soluções tecnológicas."/>
+    
+    <meta itemprop="name" content="Maikelen Salles - Meus links"/>
+    <meta itemprop="url" content="https://maikelensalles-tech.web.app/"/>
+    <meta itemprop="description" content="Sou Desenvolvedora Front-end e Web Designer, busco oportunidades que me permitam crescer profissionalmente através do desenvolvimento de soluções tecnológicas."/>
+    <meta itemprop="thumbnailUrl" content=""/>
+    
+    <meta name="twitter:url" content="https://maikelensalles-tech.web.app/"/>
+    <meta name="twitter:title" content="Maikelen Salles - Meus links">
+    <meta name="twitter:description" content="Sou Desenvolvedora Front-end e Web Designer, busco oportunidades que me permitam crescer profissionalmente através do desenvolvimento de soluções tecnológicas.">
+    <meta name="twitter:card" content="summary"/>
     <title>Maikelen Salles | Meus links</title>
     <link rel="icon" href="images/fav-icon.png">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700,200" rel="stylesheet">
@@ -36,10 +53,10 @@
 
         <div class="fundo">
           <div class="border">
-            <div><a class="btn botão button-container" href="https://www.linkedin.com/in/maikelen-salles-2a05b4226/" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i>Me siga no LinkedIn ♡</a></div>
+            <div><a class="btn botão button-container" href="https://www.linkedin.com/in/maikelen-salles/" target="_blank" rel="noopener"><i class="fa fa-linkedin"></i>Me siga no LinkedIn ♡</a></div>
             <div><a class="btn botão" href="https://www.behance.net/maikelensalles-tech" target="_blank" rel="noopener"><i class="fa fa-behance"></i>Meu portfólio no Behance</a></div>
             <div><a class="btn botão" href="https://github.com/maikelensalles/" target="_blank" rel="noopener"><i class="fa fa-github"></i>Me siga no GitHub</a></div>
-            <div><a class="btn botão" href="https://maikelensalles.github.io/site/" target="_blank" rel="noopener"><i class="fa fa-code"></i>Meu site pessoal</a></div>
+            <div><a class="btn botão" href="https://maikelensalles-tech.web.app/" target="_blank" rel="noopener"><i class="fa fa-code"></i>Meu site pessoal</a></div>
           </div>
         </div>
       </div>
